# Atlas

./: .env.example  .gitignore  MCP.md  MEMORY_ATLAS_PLAN.md  README.md  app.js  brain-regions.test.js  db.js  db.test.js  entity-lens.js  entity-lens.test.js  index.html  llm-config.js  llm.js  llm.test.js  logger.js  mcp-server.js  mcp-server.test.js  memory-placement.js  memory-placement.test.js  memory-search.js  memory-search.test.js  neurogram_hero_animation.html  package-lock.json  package.json  region-anchors.js  region-anchors.test.js  region-mapper.js  region-mapper.test.js  schemas.js  server.js  server.test.js  styles.css  sync-memory-vectors.js  todo.md  tsconfig.json  vector-store.js  vector-store.test.js  vercel.json  vite.config.ts
.impeccable/: design.json
atlas-py/: pyproject.toml
atlas-py/atlas_py/: db.py  llm.py  llm_config.py  mcp_server.py  memory_comparison.py  related_memories.py  schemas.py  semantic_validation.py  server.py  vector_store.py
atlas-py/atlas_py/cli/: __init__.py  args.py  deps.py  env_file.py  format.py
atlas-py/atlas_py/cli/commands/: __init__.py  add.py  config.py  delete.py  entities.py  entity.py  get.py  list.py  related.py  search.py  update.py
atlas-py/atlas_py/shared/: brain_regions.py  entity_lens.py  memory_placement.py  memory_search.py  region_anchors.py  region_mapper.py
docs/: MCP.md  brain_work.md  todo.md  walkthrough.html
public/: catalog.html  compare.html  graph.html  index.html  landing.html
scripts/: build-brain-atlas.js  evaluate-extraction-v3.js  sync-memory-vectors.js
src/: audit.js  cli.js  (+20 more)
(+135 files in other folders)
